<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@color/c_f5f5f5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:background="@color/base_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_210">

            <TextView
                android:id="@+id/tv_name"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/view_size_50"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/iv_logo"
                android:scaleType="fitXY"
                android:layout_marginBottom="@dimen/view_size_10"
                android:layout_above="@id/tv_name"
                android:layout_centerInParent="true"
                android:src="@mipmap/icon_guan"
                android:layout_width="@dimen/view_size_88"
                android:layout_height="@dimen/view_size_88"/>

            <TextView
                android:id="@+id/tv_setpwd"
                android:layout_marginBottom="@dimen/view_size_145"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/view_size_15"
                android:drawableLeft="@mipmap/icon_change"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                android:layout_height="@dimen/view_size_20"
                android:text="@string/string_mine_pwd" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/view_size_16"
            android:layout_marginBottom="@dimen/view_size_16"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/include_base_line"/>

            <TextView
                android:id="@+id/tv_info"
                android:drawableLeft="@mipmap/icon_information"
                style="@style/CustomTitleItem"
                android:text="@string/string_mine_detailinfo" />

            <include
                layout="@layout/include_base_shortline"/>

            <TextView
                android:id="@+id/tv_discount"
                android:drawableLeft="@mipmap/icon_offer"
                style="@style/CustomTitleItem"
                android:text="@string/string_mine_discount" />

            <include
                layout="@layout/include_base_shortline"/>

            <TextView
                android:id="@+id/tv_notice"
                android:drawableLeft="@mipmap/icon_announcement"
                android:text="@string/string_mine_notice"
                style="@style/CustomTitleItem" />

            <include
                layout="@layout/include_base_shortline"/>

            <TextView
                android:id="@+id/tv_call"
                android:drawableLeft="@mipmap/icon_hotline"
                android:text="@string/string_mine_call"
                style="@style/CustomTitleItem" />

            <include
                layout="@layout/include_base_line"/>
        </LinearLayout>

        <include layout="@layout/include_base_line"/>

        <TextView
            android:id="@+id/tv_logout"
            style="@style/CustomItem"
            android:text="@string/string_mine_logout"
            android:gravity="center" />

        <include layout="@layout/include_base_line"/>

    </LinearLayout>

</ScrollView>