<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background_color"
    android:orientation="vertical">

    <com.common.widget.editview.CountEditText
        android:id="@+id/ev_notice"
        android:gravity="top|left"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_392p"
        android:background="@color/white"
        android:textSize="@dimen/view_size_30p"
        android:hint="@string/string_notice_hint"
        android:paddingLeft="@dimen/view_size_30p"
        android:paddingRight="@dimen/view_size_30p"
        android:paddingTop="@dimen/view_size_35p"
        android:textColorHint="@color/c_c7c7cd"
        android:textColor="@color/c_333333" />

    <LinearLayout
        android:layout_marginTop="@dimen/view_size_35p"
        android:layout_below="@id/ev_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="@dimen/view_size_30p"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/view_size_26p"
            android:text="@string/string_notice_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_marginRight="@dimen/view_size_30p"
            android:text="@string/string_notice_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c_999999" />

    </LinearLayout>

</RelativeLayout>