<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/view_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_tips"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/view_size_30p"
            android:paddingRight="@dimen/view_size_30p"
            android:layout_height="@dimen/view_size_95p">

            <TextView
                android:text="@string/string_discount_icon"
                android:textSize="@dimen/view_size_30p"
                android:textColor="@color/c_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/string_discount_check"
                android:textSize="@dimen/view_size_24p"
                android:layout_marginLeft="@dimen/view_size_11p"
                android:textColor="@color/c_f5545b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_below="@id/ll_tips"
            android:layout_marginLeft="@dimen/view_size_15"
            android:background="@color/view_gapline_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_icon"
            android:layout_below="@id/line"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/view_size_25p"
            android:paddingTop="@dimen/view_size_15p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/view_size_30p"
        android:paddingLeft="@dimen/view_size_30p"
        android:paddingRight="@dimen/view_size_30p"
        android:layout_height="@dimen/view_size_95p">

        <TextView
            android:text="@string/string_discount_msg"
            android:textSize="@dimen/view_size_30p"
            android:textColor="@color/c_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.common.widget.editview.CountEditText
            android:id="@+id/ev_discount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_c7c7cd"
            android:textSize="@dimen/view_size_30p"
            android:lines="1"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="10"
            android:hint="@string/string_discount_hint"
            android:layout_marginLeft="@dimen/view_size_36p"
            android:gravity="center_vertical"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_count"
        android:layout_margin="@dimen/view_size_30p"
        android:layout_gravity="right"
        android:textSize="@dimen/view_size_26p"
        android:text="@string/string_discount_count"
        android:textColor="@color/c_999999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>