<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/view_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:scaleType="fitXY"
        android:layout_marginTop="60dp"
        android:src="@mipmap/icon_logo"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="245dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/view_size_50"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/view_size_22"
            android:layout_height="@dimen/view_size_22"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_name"/>

        <com.common.widget.editview.DeleteEditText
            android:id="@+id/ev_account"
            style="@style/inputView_style"
            android:layout_marginLeft="@dimen/view_size_30"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/string_login_account"
            android:maxLength="30" />

        <View
            android:layout_alignParentBottom="true"
            android:background="@color/c_c4c4c4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="245dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/view_size_15"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/view_size_22"
            android:layout_height="@dimen/view_size_22"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_password"/>

        <com.common.widget.editview.DeleteEditText
            android:id="@+id/ev_passward"
            style="@style/inputView_style"
            android:layout_marginLeft="@dimen/view_size_30"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/string_login_pwd"
            android:maxLength="30" />

        <View
            android:layout_alignParentBottom="true"
            android:background="@color/c_c4c4c4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1"/>
    </RelativeLayout>

    <Button
        android:layout_centerInParent="true"
        android:id="@+id/btn_login"
        android:layout_marginLeft="@dimen/view_size_38"
        android:layout_marginRight="@dimen/view_size_38"
        android:layout_marginTop="@dimen/view_size_36"
        android:text="@string/string_login_btn"
        style="@style/CustomButton"/>

    <android.support.v4.widget.Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <RelativeLayout
        android:id="@+id/btn_register"
        android:layout_marginBottom="@dimen/view_size_25"
        style="@style/CustomFrame">

        <TextView
            android:id="@+id/tv_register"
            android:gravity="center_vertical"
            style="@style/CustomTitleText"
            android:layout_centerInParent="true"
            android:text="@string/string_login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_toRightOf="@id/tv_register"
            android:src="@mipmap/icon_new"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>